--- a/src/main/webapp/modulos/audiencia/desarrolloaudiencia.xhtml
+++ b/src/main/webapp/modulos/audiencia/desarrolloaudiencia.xhtml
@@ -24,7 +24,7 @@
 		                  				</i>
 		               				</div>
 		               				<div class="box-body">
-									<h:panelGroup rendered="#{modelLogin.role=='conciliador'}">
+									<h:panelGroup rendered="#{modelLogin.role=='conciliador' or controllerDesarrolloAudiencia.hayAsistencias(controllerAudiencia.solicitud.audiencias.get(controllerAudiencia.solicitud.audiencias.size()-1).idAudiencia)}">
 										#{controllerDesarrolloAudiencia.cargarAsistencia(controllerAudiencia.solicitud.audiencias.get(controllerAudiencia.solicitud.audiencias.size()-1).idAudiencia)}
 										<ui:include src="asistencia.xhtml">
 		               						<ui:param name="asistenciaParte" value="Convocante" />
@@ -33,7 +33,7 @@
 		               						<ui:param name="asistenciaParte" value="Convocado" />
 		               					</ui:include>
 	               					</h:panelGroup>
-	               					<h:panelGroup rendered="#{modelLogin.role=='conalbos'}">
+	               					<h:panelGroup rendered="#{modelLogin.role=='conalbos' and !controllerDesarrolloAudiencia.hayAsistencias(controllerAudiencia.solicitud.audiencias.get(controllerAudiencia.solicitud.audiencias.size()-1).idAudiencia)}">
 										<ui:include src="tomarasistencia.xhtml">
 		               						<ui:param name="asistenciaParte" value="Convocante" />
 		               					</ui:include>
@@ -132,7 +132,7 @@
 						
 						<ui:include src="modalfinalizardesarrolloaudiencia.xhtml"></ui:include>
 											
-						<h:commandButton immediate="true" rendered="#{modelLogin.role=='conalbos'}" value="Registrar Asistencia" actionListener="#{controllerAudiencia.guardarAsistencia()}" styleClass="btn btn-success btn-menu" action="listaaudiencias?faces-redirect=true"/>
+						<h:commandButton immediate="true" rendered="#{modelLogin.role=='conalbos'}" disabled="#{controllerDesarrolloAudiencia.hayAsistencias(controllerAudiencia.solicitud.audiencias.get(controllerAudiencia.solicitud.audiencias.size()-1).idAudiencia)}" value="Registrar Asistencia" actionListener="#{controllerAudiencia.guardarAsistencia()}" styleClass="btn btn-success btn-menu" action="listaaudiencias?faces-redirect=true"/>
 						<h:commandButton value="Guardar Cambios" styleClass="btn btn-success btn-menu" action="listaaudiencias?faces-redirect=true"/>
 						<h:commandButton id="btn-suspender" rendered="#{modelLogin.role=='conciliador'}" disabled="#{controllerAudiencia.activarBotonSuspender()}" value="Suspender" actionListener="#{controllerAudiencia.suspenderAudiencia()}" styleClass="btn btn-primary btn-menu" action="listaaudiencias?faces-redirect=true"/>
 						<h:commandButton id="btn-finalizar" rendered="#{modelLogin.role=='conciliador'}" disabled="#{controllerAudiencia.activarBotonFinalizar()}" onclick="$('#modalfinalizardesarrolloaudiencia').modal();" value="Finalizar" styleClass="btn btn-success btn-menu" >
