--- a/src/main/webapp/modulos/audiencia/listaaudiencias.xhtml
+++ b/src/main/webapp/modulos/audiencia/listaaudiencias.xhtml
@@ -135,12 +135,12 @@
 										
 					<h:commandButton value="Audiencia Detalle" action="listaaudienciadetalletabla?faces-redirect=true" actionListener="#{controllerSession.setIdSolicitudAudienciaDetalle(modelAudiencia.selectSolicitud.get(0))}" disabled="#{modelAudiencia.selectSolicitud.size()==1? 'false': 'true'}" styleClass="btn btn-sm btn-primary btn-menu"/>
 					
-					<h:commandButton styleClass="btn btn-sm btn-#{controllerSolicitud.colorSolicitudEstado('AUDIENCIA-CITACION')} btn-menu" value="Enviar Citaciones" disabled="#{controllerSolicitud.bloquearBoton('AUDIENCIA-CITACION','')}" ></h:commandButton>
+					<h:commandButton value="Enviar Citaciones" actionListener="#{sendMail.enviarCitacion(modelAudiencia.selectSolicitud)}" disabled="#{controllerAudiencia.bloquearBoton('AUDIENCIA-CITACION','')}" styleClass="btn btn-sm btn-#{controllerSolicitud.colorSolicitudEstado('AUDIENCIA-CITACION')} btn-menu"></h:commandButton>
 					<h:commandButton value="Desarrollar Audiencia" actionListener="#{controllerSession.setIdSolicitudDesarrolloAudiencia(modelAudiencia.selectSolicitud.get(0))}" action="desarrolloaudiencia?faces-redirect=true"  disabled="#{controllerDesarrolloAudiencia.bloquearBoton(modelAudiencia.selectSolicitud)}" styleClass="btn btn-sm btn-#{controllerSolicitud.colorSolicitudEstado('AUDIENCIA-ENCURSO')} btn-menu"/>
-					<h:commandButton styleClass="btn btn-sm btn-success btn-menu" value="Cambiar Conciliador" disabled="#{controllerSolicitud.bloquearBoton('AUDIENCIA-PENDIENTE','AUDIENCIA-ENCURSO')}" ></h:commandButton>
-					<h:commandButton  value="Aplazar" actionListener="#{controllerSolicitud.aplazarAudiencia()}" styleClass="btn btn-sm btn-warning btn-menu" disabled="#{controllerSolicitud.bloquearBoton('AUDIENCIA-PENDIENTE','')}" action="listaaudiencias?faces-redirect=true"/>
-					<h:commandButton styleClass="btn btn-sm btn-success btn-menu" value="Modificar Acta" disabled="#{controllerSolicitud.bloquearBoton('AUDIENCIA-FINALIZADA','')}" ></h:commandButton>
-					<h:commandButton styleClass="btn btn-sm btn-success btn-menu" value="Expedir Acta" disabled="#{controllerSolicitud.bloquearBoton('AUDIENCIA-FINALIZADA','')}" ></h:commandButton>
+					<h:commandButton value="Cambiar Conciliador" disabled="#{controllerSolicitud.bloquearBoton('AUDIENCIA-PENDIENTE','AUDIENCIA-ENCURSO')}" styleClass="btn btn-sm btn-success btn-menu" ></h:commandButton>
+					<h:commandButton value="Aplazar" actionListener="#{controllerAudiencia.aplazarAudiencia()}" styleClass="btn btn-sm btn-warning btn-menu" disabled="#{controllerAudiencia.bloquearBotonAplazar('AUDIENCIA-PENDIENTE','AUDIENCIA-CITACION')}" action="listaaudiencias?faces-redirect=true"/>
+					<h:commandButton value="Modificar Acta" disabled="#{controllerSolicitud.bloquearBoton('AUDIENCIA-FINALIZADA','')}" styleClass="btn btn-sm btn-success btn-menu"></h:commandButton>
+					<h:commandButton value="Expedir Acta" disabled="#{controllerSolicitud.bloquearBoton('AUDIENCIA-FINALIZADA','')}" styleClass="btn btn-sm btn-success btn-menu"></h:commandButton>
 				</h:form>
 			</div>
 		</div>
