--- a/src/main/webapp/pruebas/download.xhtml
+++ b/src/main/webapp/pruebas/download.xhtml
@@ -18,6 +18,10 @@
  
  <h:body>  
  			
+		<h:form>
+		    <h:commandButton value="Download" icon="ui-icon-arrowthick-1-s" action="#{fileUtilities.download('C:/Conalbos-Madiba/Solicitud #7/Audiencia #3/Excusas/18.JPG','18')}" />
+		</h:form>
+ 			
 		<h:form id="form1" enctype="multipart/form-data">
 			
 			
