Modal Guardar Asistencia

--- a/src/main/webapp/modulos/audiencia/asistencia.xhtml
+++ b/src/main/webapp/modulos/audiencia/asistencia.xhtml
@@ -12,7 +12,7 @@
 
 <ui:composition>
 	<div class="col-lg-6">
-		<div class="box box-success sombra">
+		<div class="box box-warning	sombra">
 	
 		    <div class="box-body no-padding">
 		      	<table id="layout-skins-list" class="table table-striped table-hover">
