--- a/src/main/webapp/modulos/audiencia/modal/modalregistrarasistencia.xhtml
+++ b/src/main/webapp/modulos/audiencia/modal/modalregistrarasistencia.xhtml
@@ -29,7 +29,7 @@
 							
 							<div class="box-footer">
 							
-								<h:commandButton actionListener="#{controllerAudiencia.guardarAsistencia()}" action="desarrolloaudiencia?faces-redirect=true"  onclick="$('#modalregistrarasistencia').modal('hide');" styleClass="btn btn-success pull-right" value="Aceptar" >									
+								<h:commandButton actionListener="#{controllerDesarrolloAudiencia.guardarAsistencia()}" action="desarrolloaudiencia?faces-redirect=true" onclick="$('#modalregistrarasistencia').modal('hide');" styleClass="btn btn-success pull-right" value="Aceptar" >									
 								</h:commandButton>
 								<h:commandButton onclick="$('#modalregistrarasistencia').modal('hide');" styleClass="btn btn-danger pull-right" value="Cancelar" >
 									<f:ajax></f:ajax>
