Modificado Entidades con una base de datos

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -17,6 +17,10 @@
 <body>
 	<ui:composition template="/resources/plantilla/plantilla.xhtml">
 		
+		<ui:define name="titulo">
+			 <title>Inicio</title>	
+		</ui:define>
+		
 		<ui:define name="content">
 			
 			<div class='content-wrapper' style="height:10px;overflow:auto">
