--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -12,6 +12,10 @@
 	<h:outputStylesheet library="css" name="madiba.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" />
+	
+	
+	<title>Login</title>
+	
 </h:head>
 <body class="hold-transition login-page">
 	<p:messages/>
