--- a/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
+++ b/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
@@ -9,7 +9,12 @@
 	</h:head>
 
 	<body>
-		<ui:composition template="/resources/plantilla/plantilla.xhtml">		
+		<ui:composition template="/resources/plantilla/plantilla.xhtml">
+			
+			<ui:define name="titulo">
+				 <title>Turno Reparto</title>	
+			</ui:define>		
+			
 			<ui:define name="content">
 			<div class='content-wrapper' style="height:10px;overflow:auto">
 				<div class="content">
