--- a/src/main/webapp/modulos/conciliadores/listaconciliadorestabla.xhtml
+++ b/src/main/webapp/modulos/conciliadores/listaconciliadorestabla.xhtml
@@ -11,6 +11,11 @@
 
 	<body>
 		<ui:composition template="/resources/plantilla/plantilla.xhtml">
+			
+			<ui:define name="titulo">
+				 <title>Lista Conciliadores</title>	
+			</ui:define>
+			
 			<ui:define name="content">
 				<div class='content-wrapper' style="height:10px;overflow:auto">
 				<div class="content">
