--- a/src/main/webapp/resources/secciones/sidebar.xhtml
+++ b/src/main/webapp/resources/secciones/sidebar.xhtml
@@ -30,7 +30,8 @@
 						<span>Inicio</span>	
 				    </h:outputLink>
 				</li>
-										    
+				
+			<h:panelGroup layout="block" rendered="#{modelLogin.role=='conalbos'}"> 						    
 				<li class="treeview">
 					<h:outputLink value="#" >
 				        <i class="fa fa-users"></i>
@@ -57,6 +58,7 @@
 						<span>Solicitudes</span>
 				    </h:outputLink>
 				</li>
+			</h:panelGroup>
 				<li>
 					<h:outputLink value="/Madiba/modulos/audiencia/listaaudiencias.jsf" >
 				        <i class="fa fa-users"></i>
