--- a/src/main/webapp/modulos/audiencia/modal/modaldevolucion.xhtml
+++ b/src/main/webapp/modulos/audiencia/modal/modaldevolucion.xhtml
@@ -16,12 +16,12 @@
 				<div class="animated flipInY">
 					<div class="box box-primary box-solid animated flipInY">
 						<div class="box-header text-center with-border">
-							<h3 class="box-title">Subir </h3>
+							<h3 class="box-title">Devolución del 70%</h3>
 						</div>
 							<div class="box-body" style="background-color: aliceblue;">
 								<div class="row">
 									<div class="col-lg-12 text-center">
-										<h:outputLabel style="font-size: 18px;" value="Esta Seguro de subir" />
+										<h:outputLabel style="font-size: 18px;" value="Esta seguro de hacer la Devolucion" />
 										<br/>
 									</div>
 								</div>
