Añadida opcion de busqueda en solicitud y audiencia

--- a/src/main/webapp/resources/plantilla/plantilla.xhtml
+++ b/src/main/webapp/resources/plantilla/plantilla.xhtml
@@ -46,5 +46,10 @@
 	<h:outputScript library="js" name="app.js" />
 	<h:outputScript library="js" name="madiba.js" />
 	
+	<h:outputScript library="js" name="jquery.inputmask.js" />
+	<h:outputScript library="js" name="jquery.inputmask.date.extensions.js" />
+	<h:outputScript library="js" name="jquery.inputmask.extensions.js" />
+	
+	
 </h:body>
 </html>
