--- a/src/main/webapp/resources/secciones/sidebar.xhtml
+++ b/src/main/webapp/resources/secciones/sidebar.xhtml
@@ -65,9 +65,12 @@
 						<span>Audiencia</span>
 				    </h:outputLink>
 				</li>
+								
 			</ul>
+			
+			<ui:insert name="busqueda"></ui:insert>
 		</div>
-		
+			
 		</h:form>
 	</ui:composition>
 </body>
