--- a/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
+++ b/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
@@ -12,8 +12,8 @@
 	<ui:composition>
 		
 		<h:panelGroup layout="block" styleClass="col-lg-6 col-md-12 col-sm-12 col-xs-12">	
-			<f:ajax event="click" listener="#{modelSolicitud.addSelectSolicitud(solicitud.idSolicitud,solicitud.estado)}" render="#{formulario}" ></f:ajax>	 
-			<h:panelGroup layout="block" styleClass="box box-#{controllerSolicitud.colorSolicitudEstado(solicitud.estado)} sombra #{controllerSolicitud.seleccionarSolicitud(solicitud.idSolicitud,solicitud.estado)}">
+			<f:ajax event="click" listener="#{modelSolicitud.addSelectSolicitud(solicitud,solicitud.estado)}" render="#{formulario}" ></f:ajax>	 
+			<h:panelGroup layout="block" styleClass="box box-#{controllerSolicitud.colorSolicitudEstado(solicitud.estado)} sombra #{controllerSolicitud.seleccionarSolicitud(solicitud,solicitud.estado)}">
 				
 				<div class="box-header with-border" style="padding-bottom:0px">
 					<i>
