--- a/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
+++ b/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
@@ -63,14 +63,14 @@
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 	              				<h:outputLabel value="Banco:" />
-	              				<h:outputText style="padding-left:5%" value="#{controllerDominio.nombreDominio(pagos.banco)}" />
+	              				<h:outputText style="padding-left:5%" rendered="#{pagos.estado=='PAGADO'}" value="#{controllerDominio.nombreDominio(pagos.banco)}" />
 	              				<br />              				
 	              				<h:outputLabel value="Forma de Pago:" />
-	              				<h:outputText style="padding-left:5%" value="#{controllerDominio.nombreDominio(pagos.formaPago)}" />
+	              				<h:outputText style="padding-left:5%" rendered="#{pagos.estado=='PAGADO'}" value="#{controllerDominio.nombreDominio(pagos.formaPago)}" />
 	           				</div>
 	           				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 	              				<h:outputLabel value="Referencia:" />
-	              				<h:outputText style="padding-left:5%" value="#{pagos.referencia}" />
+	              				<h:outputText style="padding-left:5%" rendered="#{pagos.estado=='PAGADO'}" value="#{pagos.referencia}" />
 	              				<br />              				
 	              				<h:outputLabel value="Valor:" />
 	              				<h:outputText style="padding-left:5%" value="$#{pagos.valor}" />
