--- a/src/main/webapp/modulos/audiencia/listaaudiencias.xhtml
+++ b/src/main/webapp/modulos/audiencia/listaaudiencias.xhtml
@@ -48,17 +48,17 @@
 				<h:panelGrid id="numero" columns="2" style="margin:15px">
 					<h:panelGroup rendered="#{modelBusqueda.tipoParte=='Convocado' || modelBusqueda.tipoParte=='Convocante' ? 'true': 'false'}">
 						<p:outputLabel value="Cédula" style="color: white;width:80px" />    
-			        	<p:inputText id="cc" class="fa" value="#{modelBusqueda.cc}" style="width:115px;text-align:center" >
+			        	<p:inputText id="cc" class="fa" value="#{modelBusqueda.numero}" style="width:115px;text-align:center" >
 			        		<f:ajax event="keyup" render="botones" execute="@this"></f:ajax>
 			        	</p:inputText>
 		        	</h:panelGroup>
 		        	<h:panelGroup rendered="#{modelBusqueda.tipoParte=='Radicado' ? 'true': 'false'}">
 						<p:outputLabel value="Número" style="color: white;width:80px" />    
-			        	<p:inputText id="radicado" class="fa" value="#{modelBusqueda.cc}" style="width:115px;text-align:center" >
+			        	<p:inputText id="radicado" class="fa" value="#{modelBusqueda.numero}" style="width:115px;text-align:center" >
 			        		<f:ajax event="keyup" render="botones" execute="@this"></f:ajax>
 			        	</p:inputText>
 		        	</h:panelGroup>
-		        	<h:selectOneMenu class="fa" value="#{modelBusqueda.cc}" rendered="#{modelBusqueda.tipoParte=='Conciliador' ? 'true': 'false'}" style="width:195px; height: 25px">
+		        	<h:selectOneMenu class="fa" value="#{modelBusqueda.numero}" rendered="#{modelBusqueda.tipoParte=='Conciliador' ? 'true': 'false'}" style="width:195px; height: 25px">
 			            <f:selectItem itemLabel="Seleccione Uno..." itemValue="0" />
 			            <f:selectItems value="#{modelBusqueda.conciliadores}" />
 			        </h:selectOneMenu>
@@ -79,10 +79,10 @@
 				</h:panelGrid>
 				
 				<h:panelGrid id="botones" columns="1" style="margin:15px">
-					<h:commandButton value="Buscar" rendered="#{modelBusqueda.cc=='' || modelBusqueda.cc==null? 'true': 'false'}" styleClass="btn btn-success" style="width:195px">
+					<h:commandButton value="Buscar" rendered="#{modelBusqueda.numero=='' || modelBusqueda.numero==null? 'true': 'false'}" styleClass="btn btn-success" style="width:195px">
 						<f:ajax render="mensaje" listener="#{modelBusqueda.setMensaje(true)}"></f:ajax>
 					</h:commandButton>
-					<h:commandButton value="Buscar" action="listaaudiencias" rendered="#{modelBusqueda.cc!=null and modelBusqueda.cc!=''? 'true': 'false'}" styleClass="btn btn-success" style="width:195px" />
+					<h:commandButton value="Buscar" action="listaaudiencias" rendered="#{modelBusqueda.numero!=null and modelBusqueda.numero!=''? 'true': 'false'}" styleClass="btn btn-success" style="width:195px" />
 				</h:panelGrid>
 			</h:panelGroup>
 		</ui:define>
