Implementacion de pagos por sobrecosto y reliquidacion

--- a/src/main/webapp/modulos/audiencia/modal/modalfinalizardesarrolloaudiencia.xhtml
+++ b/src/main/webapp/modulos/audiencia/modal/modalfinalizardesarrolloaudiencia.xhtml
@@ -29,7 +29,7 @@
 							
 							<div class="box-footer">
 							
-								<h:commandButton actionListener="#{controllerDesarrolloAudiencia.addResultado('FINALIZADA')}" action="listaaudiencias?faces-redirect=true"  onclick="$('#modalfinalizardesarrolloaudiencia').modal('hide');" styleClass="btn btn-success pull-right" value="Aceptar" >									
+								<h:commandButton actionListener="#{controllerDesarrolloAudiencia.addResultado('FINALIZADA')}" action="listaaudiencias"  onclick="$('#modalfinalizardesarrolloaudiencia').modal('hide');" styleClass="btn btn-success pull-right" value="Aceptar" >									
 								</h:commandButton>
 								<h:commandButton onclick="$('#modalfinalizardesarrolloaudiencia').modal('hide');" styleClass="btn btn-danger pull-right" value="Cancelar" >
 									<f:ajax></f:ajax>
