--- a/src/main/webapp/modulos/solicitudes/listasolicitudestabla.xhtml
+++ b/src/main/webapp/modulos/solicitudes/listasolicitudestabla.xhtml
@@ -105,7 +105,7 @@
 						<div class="nav-tabs-custom">
 							<ul class="nav nav-tabs" style="border-color: blue">
 								<li class="active"><a href="#todas" data-toggle="tab">Todas <span class="label label-black">#{controllerSolicitud.listaSolicitud.size()}</span></a></li>
-								<li><a href="#liquidar" data-toggle="tab">Por Pagar <span class="label label-#{controllerSolicitud.colorSolicitudEstado('GRABADA')}">#{controllerSolicitud.solicitudesPorEstado('GRABADA').size()}</span></a></li>
+								<li><a href="#liquidar" data-toggle="tab">Por Pagar <span class="label label-#{controllerSolicitud.solicitudesPorPagar()}">#{controllerSolicitud.solicitudesPorEstado('GRABADA').size()}</span></a></li>
 								<li><a href="#radicar" data-toggle="tab">Por Radicar <span class="label label-#{controllerSolicitud.colorSolicitudEstado('PAGADA')}">#{controllerSolicitud.solicitudesPorEstado('PAGADA').size()}</span></a></li>
 								<li><a href="#asignarConciliador" data-toggle="tab">Por Conciliador <span class="label label-#{controllerSolicitud.colorSolicitudEstado('RADICADA')}">#{controllerSolicitud.solicitudesPorEstado('RADICADA').size()}</span></a></li>
 								<li><a href="#paraaudiencia" data-toggle="tab">Para Audiencia <span class="label label-#{controllerSolicitud.colorSolicitudEstado('DESIGNACION')}">#{controllerSolicitud.solicitudesPorEstado('DESIGNACION').size()}</span></a></li>
